# HackX

./: CAPTION_DETECTION_FLOW_DIAGRAMS.md  CAPTION_DUPLICATION_DEPLOYMENT.md  CAPTION_DUPLICATION_FIX.md  CAPTION_DUPLICATION_QUICK_FIX.md  CAPTION_DUPLICATION_VISUAL_GUIDE.md  CAPTION_FIX_COMPLETE_SUMMARY.md  CAPTION_FIX_QUICK_REFERENCE.md  CAPTION_FIX_QUICK_START.md  CAPTION_NOT_DETECTED_FIX.md  CHROME_EXTENSION_OPTIMIZATION.md  CHROME_EXTENSION_READY.md  CHROME_EXTENSION_TEST_GUIDE.md  CLASSROOM_FIX_COMPLETE.md  CLASSROOM_IMPLEMENTATION_PLAN.md  CLASSROOM_PLAN_VISUAL_SUMMARY.md  CLASSROOM_QUICK_REFERENCE.md  COMMANDS.md  COMPLETE_FIX_REPORT.md  COMPLETE_TECH_STACK.md  COMPLETION_SUMMARY.md  CONSOLE_ERRORS_EXPLAINED.md  CONSOLE_ERROR_DIAGNOSIS.md  CONSOLE_OUTPUT_REFERENCE.md  DEBUGGING_ACTIVATED.md  DEPLOYMENT_READY.md  DOCKER_FIX.md  DOCUMENTATION_INDEX.md  EXTENSION_SETUP.md  EXTENSION_STATUS.md  FILE_INVENTORY.md  FIX_SUMMARY.md  FRONTEND_SETUP_COMPLETE.md  IMMEDIATE_ACTION_REQUIRED.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  METHODOLOGY.md  MIGRATION_GUIDE.md  PHASE_1_COMPLETE.md  PHASE_1_SUMMARY.md  PHASE_1_VERIFICATION.md  (+32 more)
backend/: .dockerignore  API_DOCUMENTATION.md  Dockerfile  HF_DEPLOYMENT_GUIDE.md  README.md  STORAGE_CHANGES.md  __init__.py  deploy_to_hf.ps1  deploy_to_hf.sh  pyproject.toml  quick_start.bat  quick_start.ps1  requirements.txt  start.py  test_backend.py
backend/app/: main.py
backend/models/: __init__.py  detr_model.py
backend/services/: dynamic_video_fetcher.py  revtrans.py
chrome_extension/: API_CONTRACT.md  ARCHITECTURE.md  DEBUG_GUIDE.md  (+6 more)
(+27 files in other folders)
